ADDED: searching simple numbers & minor fixes